- Ctrl+Shift+E to send a broadcast message
- Ctrl+Alt+B to kick and ban
- Ctrl+Shift+Alt+M to mute/unmute media files of an user
- Messages timestamp now return also dates
- Messages timestamps are now translatables
- User volume levels and subscriptions are restored on login when using BearWare.dk Web Login
Default QT Client:
- Update window title at login with server name
- Status mode is now displayed for Away, Question, Streaming media file and Webcam
- Away is displayed when switching automatically to Away-mode due to inactivity, and also when manually switching to this mode
- Status mode is now displayed on receiving side (after status message)
- Ctrl+H/Y and Ctrl+Shift+H/Y to increase/decrease voice and media files volume of an user
- Ctrl+Shift+E to send a broadcast message
- Ctrl+Alt+B to kick and ban
- Ctrl+Shift+Alt+M to mute/unmute media files of an user
- User volume levels and subscriptions are restored on login when using BearWare.dk Web Login
Android client
- User volume levels and subscriptions are restored on login when using BearWare.dk Web Login
iOS client
- User volume levels and subscriptions are restored on login when using BearWare.dk Web Login
Server
- Allow BearWare.dk Web Login without "bearware" user account

Version 5.6, 2020/08/04
Accessible Windows client
- Removed duplex mode for sound devices
- Removed Windows Sound system
- Removed Advanced page from Preferences
- Default sound system, Windows Audio Session, now uses Windows' own echo cancellor, AGC and noise suppression
- User accounts are now sorted alphabetically
- Text message log files are stored with .clog and .ulog extension for channel and user log respectively
- Blank nicknames are set to NoName followed by user ID
- More items are now translatable.
- French, Turkish, German and Chinese languages updated.
- All areas of main window are now labelled
- Slider controls now use down arrow to decrease volume and up arrow to increase volume