@@ -369,7 +369,7 @@ CMessageDlg* CTeamTalkDlg::GetUsersMessageSession(int nUserID, BOOL bCreateNew, 
 
         CString szLogFolder = STR_UTF8(m_xmlSettings.GetUserTextLogStorage());
 
-        CMessageDlg* pMsgDlg = new CMessageDlg(this, myself, user, szLogFolder);
+        CMessageDlg* pMsgDlg = new CMessageDlg(m_xmlSettings, this, myself, user, szLogFolder);
         pMsgDlg->m_messages = m_wndTree.GetUserMessages(nUserID);
         m_mUserDlgs[user.nUserID] = pMsgDlg;
         MyFont font;
@@ -2032,9 +2032,15 @@ void CTeamTalkDlg::OnUserMessage(const TTMessage& msg)
                 WriteLogMsg(m_logChan, szLine);
             
             CString szFmt, szMsg;
-            szFmt.LoadString(IDS_CHANTEXTMSG);
-            TRANSLATE_ITEM(IDS_CHANTEXTMSG, szFmt);
-            szMsg.Format(szFmt, szName, textmsg.szMessage);
+            if(textmsg.nFromUserID == TT_GetMyUserID(ttInst)) {
+                szFmt.LoadString(IDS_CHANTEXTMSGSEND);
+                TRANSLATE_ITEM(IDS_CHANTEXTMSGSEND, szFmt);
+                szMsg.Format(szFmt, textmsg.szMessage);
+            } else {
+                szFmt.LoadString(IDS_CHANTEXTMSG);
+                TRANSLATE_ITEM(IDS_CHANTEXTMSG, szFmt);
+                szMsg.Format(szFmt, szName, textmsg.szMessage);
+            }
             if (m_xmlSettings.GetEventTTSEvents() & TTS_USER_TEXTMSG_CHANNEL)
                 AddTextToSpeechMessage(szMsg);
         }
