@@ -151,6 +151,7 @@
 #define IDS_SUBINT_MEDIAFILE            244
 #define IDS_DESKTOPINPUT_GRANTED        245
 #define IDD_WIZARD_COMPLETIONPAGE       246
+#define IDS_MPSEND                      247
 #define IDS_DESKTOPINPUT_ACTIVE         248
 #define IDD_DIALOG_KEYCOMP              249
 #define IDR_MENU_MSGPOPUP               250
@@ -375,6 +376,7 @@
 #define IDS_HOSTMANAGERDELHOST          471
 #define IDS_HOSTMANAGERPUBLIC           472
 #define IDS_HOSTMANAGERHOSTFILES        473
+#define IDS_CHANTEXTMSGSEND             474
 #define IDS_HOSTMANAGERFILENOTCONTAINVALIDENTRY 475
 #define IDS_KEYCOMPERROR                476
 #define IDS_MEDIASTORAGEWAVEFORMAT      477
